2006-06-08  Jordi Mallach  <jordi@sindominio.net>

	* plugins/automapper/map.c, ui/prefs.glade,
	gnome-mud.schemas.in: Fix typos and unify some strings.
	Thanks Thierry Moisan. Fixes #328527, #343018.

2006-05-25  Jordi Mallach  <jordi@sindominio.net>

	* configure.ac (IT_PROG_LIBTOOL): Switch to IT_PROG_INTLTOOL and
	bump it to 0.35	for po/LINGUAS support.
	(ALL_LINGUAS): Removed, now in po/LINGUAS.

2006-05-11  Les Harris  <hl.harris@comcast.net>

	* configure.ac: Added two new dependencies for gmud, libpcre-6.0
	for trigger/alias support and gmodule-2.0 for plugin support.

	* src/Makefile.am: Added new files for triggers/aliases to sources.

	* src/mud-connection-view.[ch], src/mud-preferences-window.[ch],
	src/mud-window.[ch], mud-profiles.[ch]: Added in trigger/alias
	support for Gmud.

	* src/mud-regex.[ch], src/mud-parse-base.[ch],
	src/mud-parse-trigger.[ch], src/mud-parse-alias.[ch]: New files
	which implement trigger/alias support.

	* src/mud-connection-view.c, src/modules_api.[ch]: Added a stupid
	hack to allow plugins to gag a line of text from the main terminal.
	I'll remove this with the refactoring of the plugin system.

	* src/mud-window-mudedit.c: Fixed a bug thats been in there since I
	wrote it.  Now Gmud will properly add characters with a new mud.

	* src/utils.c: Reimplemented remove_whitespace() to make it not suck
	and more importantly, to not cause random crashes (especially in
	mudedit window and mudconnect window).

	* src/modules.[ch], src/modules_api.[ch], src/modules-structures.h:
	Converted the plugin system to use GModule instead of dl*.

	* ui/prefs.glade: Updated preferences window for triggers & aliases.

	* plugins/test.plugin/main.c: Updated test plugin for GModule use.

	* plugins/statusbars: Added a new plugin which provides a
	graphical status bar window (much like the old python one). Also
	demonstrates a more complex plugin.

	* plugins/outputwindows: Added a new plugin which provides